--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,13 @@ html {
     scroll-behavior: smooth;
 }
 
-.nav-link.active {
+.nav-link.active, .prj {
     background-color: #ee9617;
     background-image: linear-gradient(315deg, #ee9617 0%, #fe5858 74%);
+}
 
+.prj {
+    color:white
 }
 
 .nav-link {
@@ -71,66 +74,121 @@ html {
     border-right:1px solid lightgrey;
 }
 
-.text-custom,
-.navbar-custom .navbar-nav li a:hover,
-.navbar-custom .navbar-nav li a:active,
-.navbar-custom .navbar-nav li.active a,
-.service-box .services-icon,
-.price-features p i,
-.faq-icon,
-.social .social-icon:hover {
+.text-custom, .options p i {
     color: #f6576e !important;
 }
 
-.bg-custom,
-.btn-custom,
-.timeline-page .timeline-item .date-label-left::after,
-.timeline-page .timeline-item .duration-right::after,.back-to-top:hover {
-    background-color: #f6576e;
-}
-
-.btn-custom,
-.custom-form .form-control:focus,
-.social .social-icon:hover,
-.registration-input-box:focus {
-    border-color: #f6576e;
-}
-
-.service-box .services-icon,
-.price-features p i {
+.options p i {
     background-color: rgba(246, 87, 110, 0.1);
 }
 
-.btn-custom:hover,
-.btn-custom:focus,
-.btn-custom:active,
-.btn-custom.active,
-.btn-custom.focus,
-.btn-custom:active,
-.btn-custom:focus,
-.btn-custom:hover,
-.open > .dropdown-toggle.btn-custom {
-    border-color: #e45267;
-    background-color: #e45267;
-}
 
-
-.price-box {
+.ctntarif, .ctntarifl, .ctntarifr {
     padding: 40px 50px;
 }
 
-.plan-price h1 span {
+
+.prix h1 span {
     font-size: 16px;
     color: #000;
 }
 
-.price-features p i {
+.options p i {
     height: 20px;
     width: 20px;
     display: inline-block;
     text-align: center;
     line-height: 20px;
-    font-size: 14px;
+    font-size: 20px;
     border-radius: 50%;
     margin-right: 20px;
+}
+
+.bouton {
+    width: 150px;
+    height: 70px;
+    position:fixed;
+    z-index:99;
+    background-color:#141414;
+    left:0;
+    top:15%;
+    margin-left:-100px;
+    border:2px #a8a8a8 solid;
+}
+
+.boutontoggle {
+    margin-left:17px;
+    margin-top:12px;
+}
+
+.bouton img {
+    width:30px;
+    margin-top:15px;
+    margin-left:10px;
+    animation: rotating 5s linear infinite;
+}
+
+@keyframes rotating {
+    from{
+        -webkit-transform: rotate(0deg);
+    }
+    to{
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+.borderrr {
+    border:1px solid blue;
+}
+
+footer {
+    width: 75%;
+}
+
+.footer {
+    background-color:#141414;
+    margin-top:50px;
+    margin-bottom: 0;
+    height:100px;
+}
+
+.footer li {
+    color:#d7e1ec;
+}
+
+
+
+
+@media (max-width:991px) {
+    .dc {
+        margin-top:50px;
+    }
+}
+
+
+@media (max-width:768px) {
+    .dc {
+        margin-top:50px;
+    }
+
+    .tmdc {
+        text-align:center;
+    }
+
+    #mt-mb {
+        margin-top:50px;
+    }
+    .bmap {
+        border-right:0px;
+        margin-bottom:50px;
+    }
+}
+
+.list-unstyled li {
+    transition: all ease-in-out 0.3s;
+}
+
+.list-unstyled li:hover {
+    transform:translateX(10px);
+    transition: all ease-in-out 0.3s;
 }
