--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ html {
 }
 
 .header {
-    background-image: url('/img/construction.jpg');
+    background-image: url('images/construction.webp');
     background-repeat: no-repeat;
     background-size: cover;
 }
