--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@ html {
 }
 
 .header {
-    background-image: url('images/construction.webp');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -154,7 +153,32 @@ footer {
         border-right:0px;
         margin-bottom:50px;
     }
+    .carousel-caption {
+        position: initial;
+        z-index: 10;
+        padding: 3rem 2rem;
+        color: rgba(78, 77, 77, 0.856);
+        text-align: center;
+        font-size: 0.7rem;
+        font-style: italic;
+        font-weight: bold;
+        line-height: 1.5rem
+    }
+    .carousel-caption img {
+        width: 4rem;
+        border-radius: 4rem;
+        margin-top: 1rem
+    }
+    #image-caption {
+        font-style: normal;
+        font-size: 0.6rem;
+        margin-top: 0.5rem
+    }
+    .carousel i {
+        padding: 0.8rem
+    }
 }
+
 
 .list-unstyled li {
     transition: all ease-in-out 0.3s;
@@ -163,4 +187,237 @@ footer {
 .list-unstyled li:hover {
     transform:translateX(10px);
     transition: all ease-in-out 0.3s;
+}
+
+
+.feature-box-1 {
+    padding: 32px;
+    box-shadow: 0 0 30px rgba(31, 45, 61, 0.125);
+    margin: 15px 0;
+    position: relative;
+    z-index: 1;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: ease all 0.35s;
+    top: 0;
+}
+.feature-box-1 * {
+    transition: ease all 0.35s;
+}
+.feature-box-1 .icon {
+    width: 70px;
+    height: 70px;
+    line-height: 70px;
+    background: #fc5356;
+    color: #ffffff;
+    text-align: center;
+    border-radius: 50%;
+    margin-bottom: 22px;
+    font-size: 27px;
+}
+.feature-box-1 .icon i {
+    position:absolute;
+    margin: 53px 0 0 54px;
+    top:0;
+    left:0;
+}
+
+.feature-box-1 .icon2 i {
+    margin: 53px 0 0 55px;
+}
+
+.feature-box-1 h5 {
+    color: #141414;
+    font-weight: 600;
+}
+.feature-box-1 p {
+    margin: 0;
+}
+.feature-box-1:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: auto;
+    right: 0;
+    border-radius: 10px;
+    width: 0;
+    background-color: #ee9617;
+    background-image: linear-gradient(315deg, #ee9617 0%, #fe5858 74%);
+    z-index: -1;
+    transition: ease all 0.35s;
+}
+.feature-box-1:hover {
+    top: -5px;
+}
+
+.feature-box-1:hover .icon {
+    background: rgba(255, 255, 255, 0.8);
+}
+
+.feature-box-1:hover .icon i{
+    color: #141414;
+}
+
+.feature-box-1:hover h5 {
+    color: #ffffff;
+}
+.feature-box-1:hover p {
+    color: rgba(255, 255, 255, 0.8);
+}
+.feature-box-1:hover:after {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    left: 0;
+    right: auto;
+}
+.section {
+    padding: 100px 0;
+    position: relative;
+}
+.section-title {
+    padding-bottom: 45px;
+}
+.section-title h2 {
+    font-weight: 700;
+    color: #141414;
+    font-size: 45px;
+    margin: 0 0 15px;
+    border-left: 5px solid #fc5356;
+    padding-left: 15px;
+}
+
+
+#commentaires {
+    background: linear-gradient(112deg, #ffffff 50%, antiquewhite 50%);
+    max-width: 900px;
+    margin: auto;
+}
+
+.carousel-caption {
+    position: initial;
+    z-index: 10;
+    padding: 5rem 8rem;
+    color: rgba(78, 77, 77, 0.856);
+    text-align: center;
+    font-size: 1.2rem;
+    font-style: italic;
+    font-weight: bold;
+    line-height: 2rem;
+}
+
+.carousel-caption img {
+    width: 6rem;
+    border-radius: 5rem;
+    margin-top: 2rem;
+}
+
+#image-caption {
+    font-style: normal;
+    font-size: 1rem;
+    margin-top: 0.5rem;
+}
+
+.carousel i {
+    background-color: #fc5356;
+    padding: 1.4rem;
+}
+
+
+.carousel-control-prev {
+    justify-content: flex-start;
+}
+
+.carousel-control-next {
+    justify-content: flex-end;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    transition: none;
+    opacity: unset;
+}
+
+.modal-newsletter {	
+	color: #999;
+	width: 625px;
+	max-width: 625px;
+	font-size: 15px;
+}
+.modal-newsletter .modal-content {
+	padding: 30px;
+	border-radius: 0;		
+	border: none;
+}
+.modal-newsletter .modal-header {
+	border-bottom: none;   
+	position: relative;
+	border-radius: 0;
+}
+.modal-newsletter h4 {
+	color: #000;
+	font-size: 30px;
+	margin: 0;
+	font-weight: bold;
+}
+.modal-newsletter .close {
+	position: absolute;
+	top: -15px;
+	right: -15px;
+	text-shadow: none;
+	opacity: 0.3;
+	font-size: 24px;
+    transition:all 0.5s;
+}
+.modal-newsletter .close:hover {
+	opacity: 0.8;
+    transition:all 0.5s;
+    cursor:pointer;
+}
+.modal-newsletter .icon-box {
+	color: #7265ea;		
+	display: inline-block;
+	z-index: 9;
+	text-align: center;
+	position: relative;
+	margin-bottom: 10px;
+}
+.modal-newsletter .icon-box i {
+	font-size: 110px;
+}
+.modal-newsletter .form-control, .modal-newsletter .btn {
+	min-height: 46px;
+	border-radius: 0;
+}
+.modal-newsletter .form-control {
+	box-shadow: none;
+	border-color: #dbdbdb;
+}
+.modal-newsletter .form-control:focus {
+	border-color: #f95858;
+	box-shadow: 0 0 8px rgba(249, 88, 88, 0.4);
+}
+.modal-newsletter .btn {
+	color: #fff;
+	background: #f95858;
+	text-decoration: none;
+	transition: all 0.4s;
+	line-height: normal;
+	padding: 6px 20px;
+	min-width: 150px;
+	margin-left: 6px !important;
+	border: none;
+}
+.modal-newsletter .btn:hover, .modal-newsletter .btn:focus {
+	box-shadow: 0 0 8px rgba(249, 88, 88, 0.4);
+	background: #f72222;
+	outline: none;
+}
+.modal-newsletter .input-group {
+	margin-top: 30px;
+}
+
+.sendbtn {
+    background-color:#ee9617;
 }
